# Pied-Piper

./: .cache  .env  .gitignore  LICENSE  Pied_Piper.py  Pied_Piper_local_script.py  Pied_Piper_web.py  Pipey.py  README.md  main.py  package-lock.json  package.json  pied_piper_agent.py  pyproject.toml  requirements.txt  run_pied_piper.py  start_agent.py
attached_assets/: Pied_Piper.py  requirements.txt
client/src/: index.css
client/src/components/: audio-visualizer.tsx  voice-interface.tsx
client/src/hooks/: use-livekit.ts
client/src/lib/: livekit-client.ts
client/src/pages/: home.tsx
fastapi_backend/: Dockerfile  README.md  docker-compose.yml  dockerfile.agent  main.py  requirements.txt  start.sh
my_env/: pyvenv.cfg
my_env/Scripts/: activate  activate.bat
pied-piper-vui/: tailwind.config.ts
pied-piper-vui/app/: globals.css  layout.tsx  page.tsx
pied-piper-vui/app/api/chat/: route.ts
pied-piper-vui/app/api/search/: route.ts
pied-piper-vui/app/api/speech/: route.ts
pied-piper-vui/app/chat/: page.tsx
pied-piper-vui/components/: pipey-avatar.tsx
server/: routes.ts
