[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "google-generativeai>=0.8.5",
    "livekit-agents[google]>=1.0.22",
    "livekit-plugins-noise-cancellation>=0.2.4",
    "lyricsgenius>=3.6.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "serpapi>=0.1.5",
    "spotipy>=2.25.1",
]
